fix: update dark mode for schedule

--- a/assets/styles/components/dark-mode.scss
+++ b/assets/styles/components/dark-mode.scss
@@ -151,4 +151,20 @@
   .spreads__title {
     color: var(--white);
   }
+
+  .type-of-account__info-title {
+    color: var(--white);
+  }
+
+  .type-of-account__info-text {
+    color: var(--white);
+  }
+
+  .type-of-account-table__schedule-title {
+    color: var(--white);
+  }
+
+  .type-of-account-table__schedule-subtitle {
+    color: var(--white);
+  }
 }
